# redisbench-admin

./: .flake8  .gitignore  .gitmodules  =1.6.1  =3.0  LICENSE  README.md  dev_requirements.txt  pyproject.toml  tox.ini
.github/workflows/: codeql.yml  poetry-ci-test-lint.yml  poetry-pytest.yml  publish-pypi.yml  release-drafter.yml  tox.yml
docs/: Readme.md  export.md  exporter-memtier-metrics.yml
redisbench_admin/: __init__.py  cli.py
redisbench_admin/commands/: __init__.py
redisbench_admin/compare/: args.py  compare.py
redisbench_admin/deploy/: args.py  deploy.py
redisbench_admin/environments/: oss_cluster.py  oss_standalone.py
redisbench_admin/export/: args.py  export.py
redisbench_admin/export/common/: common.py
redisbench_admin/export/ftsb_redisearch/: ftsb_redisearch_json_format.py
redisbench_admin/export/google_benchmark/: google_benchmark_json_format.py
redisbench_admin/export/pyperf/: pyperf_json_format.py
redisbench_admin/export/redis_benchmark/: metrics_definition.py  redis_benchmark_csv_format.py
redisbench_admin/extract/: args.py  extract.py
redisbench_admin/grafana_api/: app.py  args.py  grafana_api.py
redisbench_admin/profilers/: daemon.py  perf.py  perf_daemon_caller.py  pprof.py  profilers.py  profilers_local.py  profilers_schema.py  stackcollapse-perf.pl  vtune.py
redisbench_admin/run/: args.py  cluster.py  common.py  git.py  grafana.py  metrics.py  modules.py  redistimeseries.py  run.py  s3.py  ssh.py
redisbench_admin/run/aibench_run_inference_redisai_vision/: aibench_run_inference_redisai_vision.py
redisbench_admin/run/ann/: ann.py
redisbench_admin/run/ftsb/: ftsb.py
redisbench_admin/run/ftsb_redisearch/: ftsb_redisearch.py
redisbench_admin/run/ycsb/: ycsb.py
redisbench_admin/run_async/: args.py  async_db.py  async_env.py  async_failures.py  async_helpers.py  async_terraform.py  benchmark.py  consts.py  render_files.py  run_async.py  standalone.py  terraform.py
redisbench_admin/run_local/: args.py  local_client.py  local_db.py  local_helpers.py  profile_local.py  run_local.py
redisbench_admin/run_remote/: args.py  consts.py  log.py  notifications.py  remote_client.py  remote_db.py  remote_env.py  remote_failures.py  remote_helpers.py  run_remote.py  standalone.py  terraform.py
redisbench_admin/utils/: benchmark_config.py  local.py  redisearch.py  redisgraph_benchmark_go.py  remote.py  results.py  ssh.py  utils.py
redisbench_admin/watchdog/: args.py  watchdog.py
tests/: test_aa_run_local_oss_cluster.py  test_aa_run_remote.py  test_ann.py  test_args.py  test_benchmark_config.py  test_cluster.py  test_common.py  test_compare.py  test_export.py  test_git.py  test_grafana.py  test_local.py  test_memtier_benchmark.py  test_metrics.py  test_oss_cluster.py  test_perf_daemon_caller.py  test_pprof.py  test_profilers_schema.py  test_pyperf_json_format.py  test_redis_benchmark.py  test_redis_benchmark_csv_format.py  test_redisbench_admin.py  test_redisgraph_benchmark_go.py  test_redistimeseries.py  test_remote.py  test_remote_client.py  test_remote_env.py  test_run.py  test_run_local.py  test_run_remote.py  test_standalone.py  test_tsbs_run_queries_redistimeseries.py  test_utils.py  test_ycsb.py
tests/test_data/: 2021-10-01.120753test_1sh_1wk_dual_ep_mixed_2thr_50conns_persistent_mtls_msetmget_kb_1p_csv_string.csv  ann-config.yml  common-properties-enterprise.yml  common-properties-v0.3.yml  common-properties-v0.5-memtier-previous-1.3.0.yml  common-properties-v0.5.yml  defaults-with-dbconfig.yml  ftsb-1M-enwiki_abstract-hashes-fulltext-simple-1word-query.yml  init-commands-array.yml  memtier_benchmark_v1.3.0_result.json  memtier_benchmark_v1.3.1_result.json  memtier_output.json  redis-benchmark-6.2.0-csv.out  redis-benchmark-6.2.0-csv.out.2  redis-benchmark-6.2.0-csv.out.3  redis-benchmark-6.2.4-csv.out  redis-benchmark-full-suite-1Mkeys-100B.yml  redis-benchmark-json.yml  redis-benchmark-vanilla.yml  redis-benchmark-with-exporter.yml  redis-benchmark.6.0.results.csv  redis-benchmark.6.2.results.csv  redis-benchmark.yml  redis-benchmark2.yml  redisgraph-benchmark-go-bad-kpis.yml  redisgraph-benchmark-go-dataset-timeout.yml  redisgraph-benchmark-go-result.json  redisgraph-benchmark-go_2.yml  tsbs-devops-ingestion-scale100-4days-keyspace.yml  tsbs-devops-ingestion-scale100-4days-v2.yml  tsbs-scale100-cpu-max-all-1.yml  tsbs-scale100-cpu-max-all-1@4139rps.yml  tsbs-targets.yml  tsbs_load_redistimeseries_result.json  vanilla-memtier.yml  vecsim-memtier-timeout.yml  vecsim-memtier.yml  ycsb-config.yml
(+16 files in other folders)
