[tool.poetry]
name = "redisbench-admin"
version = "0.11.0"
description = "Redis benchmark run helper. A wrapper around Redis and Redis Modules benchmark tools ( ftsb_redisearch, memtier_benchmark, redis-benchmark, aibench, etc... )."
authors = ["filipecosta90 <filipecosta.90@gmail.com>","Redis Performance Group <performance@redis.com>"]
readme = "README.md"

[tool.poetry.scripts]
redisbench-admin = "redisbench_admin.cli:main"
perf-daemon = "redisbench_admin.profilers.daemon:main"

[tool.poetry.dependencies]
python = "^3.10.0"
humanize = "^2.4.0"
requests = "^2.32.3"
py_cpuinfo = "^5.0.0"
boto3 = "^1.13.24"
tqdm = "^4.46.1"
toml = "^0.10.1"
paramiko = "^2.7.2"
jsonpath_ng = "^1.5.2"
pysftp = "^0.2.9"
python_terraform = "^0.10.1"
GitPython = "^3.1.12"
PyYAML = "^6.0"
wget = "^3.2"
pytablewriter = {extras = ["html"], version = "^0.64.1"}
sshtunnel = "^0.4.0"
pyWorkFlow = "^0.0.2"
Flask = "^2.0.1"
flask-restx = "^0.5.1"
Flask-HTTPAuth = "^4.4.0"
daemonize = "^2.5.0"
pandas = "^2.1.2"
numpy = "^2.0.0"
matplotlib = "^3.1.2"
psutil = "^5.6.6"
Jinja2 = "^3.0.3"
watchdog = "^2.1.6"
redis = "^4.2.2"
slack-sdk = "^3.15.2"
slack-bolt = "^1.13.0"
certifi = "^2021.10.8"
pygithub = "^1.57"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.9.0"
codecov = "2.1.13"
black = "22.3.0"
flake8 = "^5.0.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.3"}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
